--- a/customers_regression.ipynb
+++ b/customers_regression.ipynb
@@ -1012,7 +1012,7 @@
     "ax.scatter(x_test, y_pred, label='Prediction', color='blue')\n",
     "\n",
     "\n",
-    "plt.title('Price - Square Footage of the Home (PREDICTION)')\n",
+    "plt.title('Length of Membership - Yearly Amount Spent (PREDICTION)')\n",
     "plt.xlabel('Length of Membership')\n",
     "plt.ylabel('Yearly Amount Spent')\n",
     "plt.legend(loc='upper left')\n",
