--- a/customers_linear.ipynb
+++ b/customers_linear.ipynb
@@ -1179,7 +1179,7 @@
    "id": "84453aa9",
    "metadata": {},
    "source": [
-    "Performance of a our machine learning model: **$R^2$ = %62.50**"
+    "Performance of a our machine learning model: **$R^2$ = 62.50%**"
    ]
   }
  ],
